<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tV_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="370dp"
        android:layout_marginEnd="175dp"
        android:layout_marginLeft="72dp"
        android:layout_marginRight="175dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="8dp"
        android:text="@string/Str_t2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.763" />

    <EditText
        android:id="@+id/eT_0"
        android:layout_width="179dp"
        android:layout_height="36dp"
        android:layout_marginBottom="292dp"
        android:layout_marginEnd="133dp"
        android:layout_marginLeft="72dp"
        android:layout_marginRight="133dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/mail"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tV_1" />

    <TextView
        android:id="@+id/tV_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="213dp"
        android:layout_marginLeft="73dp"
        android:layout_marginRight="213dp"
        android:layout_marginStart="73dp"
        android:layout_marginTop="15dp"
        android:text="@string/Str_t0"
        app:layout_constraintBottom_toTopOf="@+id/eT_0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tV_0"
        app:layout_constraintVertical_bias="0.619" />

    <TextView
        android:id="@+id/tV_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="21dp"
        android:layout_marginEnd="241dp"
        android:layout_marginLeft="73dp"
        android:layout_marginRight="241dp"
        android:layout_marginStart="73dp"
        android:layout_marginTop="25dp"
        android:text="@string/Str_t1"
        app:layout_constraintBottom_toTopOf="@+id/eT_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eT_0" />

    <EditText
        android:id="@+id/eT_1"
        android:layout_width="143dp"
        android:layout_height="26dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="96dp"
        android:layout_marginLeft="73dp"
        android:layout_marginRight="96dp"
        android:layout_marginStart="73dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:inputType="numberPassword"
        android:text="@string/PassWord"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/tV_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tV_2" />

    <EditText
        android:id="@+id/eT_2"
        android:layout_width="145dp"
        android:layout_height="23dp"
        android:layout_marginBottom="128dp"
        android:layout_marginEnd="167dp"
        android:layout_marginLeft="72dp"
        android:layout_marginRight="167dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:inputType="numberPassword"
        android:text="@string/PassWord_0"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tV_3" />

    <TextView
        android:id="@+id/tV_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="9dp"
        android:layout_marginEnd="269dp"
        android:layout_marginLeft="73dp"
        android:layout_marginRight="269dp"
        android:layout_marginStart="73dp"
        android:layout_marginTop="8dp"
        android:text="@string/Str_t2"
        app:layout_constraintBottom_toTopOf="@+id/eT_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eT_1" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="198dp"
        android:layout_height="28dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eT_2"
        app:srcCompat="@drawable/next" />

    <ImageButton
        android:id="@+id/iBtn_0"
        android:layout_width="56dp"
        android:layout_height="57dp"
        android:layout_marginBottom="438dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/return_btn" />
</android.support.constraint.ConstraintLayout>