<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Make">

    <TextView
        android:id="@+id/tV_0"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginBottom="96dp"
        android:layout_marginEnd="174dp"
        android:layout_marginLeft="56dp"
        android:layout_marginRight="174dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="8dp"
        android:text="@string/Str_make"
        app:layout_constraintBottom_toTopOf="@+id/eT_0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/eT_0"
        android:layout_width="293dp"
        android:layout_height="42dp"
        android:layout_marginEnd="35dp"
        android:layout_marginLeft="56dp"
        android:layout_marginRight="35dp"
        android:layout_marginStart="56dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/Str_t6"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="174dp"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="134dp"
        android:layout_height="46dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="122dp"
        android:layout_marginLeft="122dp"
        android:layout_marginRight="122dp"
        android:layout_marginStart="122dp"
        android:layout_marginTop="84dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/btn_0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eT_0"
        app:srcCompat="@drawable/make" />

    <Button
        android:id="@+id/btn_0"
        android:layout_width="132dp"
        android:layout_height="34dp"
        android:layout_marginBottom="104dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/Btn_04"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>